{
    "name": "IA_Player",
    "maps": [
        {
            "name": "Player",
            "id": "c82b127a-4eb2-49a4-8cb3-ee00041a6274",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "88c3d8c7-d1d4-436a-9128-91efdfe96cd3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "cf787208-2518-487a-a8d8-38ec7f643f58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "KeyRepeat(repeatDelay=0.01,repeatInterval=0.01)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "b419a3ee-bd26-4758-83b4-2c73e52b59eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "KeyRepeat",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "29cb5e7e-a701-4d0d-9569-8b793c65b365",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "KeyRepeat",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "10c51b60-b3f5-486d-a787-2a48e1820a14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "KeyRepeat",
                    "initialStateCheck": false
                },
                {
                    "name": "DashStart",
                    "type": "Button",
                    "id": "16aa430f-e09e-4fff-8da0-d069724719b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "DashEnd",
                    "type": "Button",
                    "id": "f4a231c9-fa3d-410d-b963-64d012d69857",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "DodgeRight",
                    "type": "Value",
                    "id": "75d83220-f4db-4ff0-a1e5-d9fce9b82ab1",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DodgeLeft",
                    "type": "Button",
                    "id": "4f067f88-780e-4262-a844-34836afc1445",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DodgeFront",
                    "type": "Button",
                    "id": "d17db404-ca48-4d6b-9568-1b6c1e2787d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DodgeBack",
                    "type": "Button",
                    "id": "387f053c-15f9-427b-9ad5-90d2c56bed3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Avoid",
                    "type": "Button",
                    "id": "54235710-e10c-4788-8f32-78c3de1f9a72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "4b16c635-394c-4932-9b40-28843d46ce88",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8ab6e3c5-3449-42e6-844b-ad79b6c9b498",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d709e0db-13aa-4fc3-8714-c05025873495",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ce558ffb-0430-4b7d-8ad7-42cd7a1e2259",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "419b4846-2725-47b8-a4d0-3a4a2a1142ed",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "16ec0f6b-7295-4e16-b63b-627bdf65d9c8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd06fadd-180b-4f49-bb39-dd6b7bea99cd",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29f2002b-abf4-44c6-9015-f461e559df02",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de556087-3acb-479d-aa09-081d23dc2d7d",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a839d16-bddb-43e2-ade6-deb040caf97f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cc87be1-4662-4dde-9c36-1b1db7a0134b",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e42bd26-8a19-4ab1-a8f1-ea64493c6ee5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "783159eb-1e83-471d-a438-134c57a731e6",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5a43548-3c94-41a2-ac80-54aa92444600",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88337a35-669a-4a77-a365-37deeab03b75",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88474fdb-e6fd-4d7c-ba49-095cd2f4dc8a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "DashStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12a20f04-aa0c-41aa-af1b-81b3e445a909",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Direction",
                    "id": "ae936897-dd9f-41d7-8821-8ead873466da",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "34e1d6d0-098b-4d3c-aa15-a1724747b0f0",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8eeee0de-596e-4beb-b4ae-190de3f72d78",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "86024aa5-6185-41f3-9095-a52fb118c26a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d5f97ca-c176-4e10-9431-76ff95ab07e9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeFront",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acc23456-bbc9-4f77-af45-84363ca93ca6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4985ca5b-5a6b-472a-abf6-e4fb30024efc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Avoid",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}